// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar when loading should create the SearchBar component 1`] = `
<form
  className="searchBar hide-submit"
  onSubmit={[Function]}
>
  <label>
    Search OMDb's film database
  </label>
  <input
    disabled="disabled"
    onChange={[Function]}
    placeholder="Star Wars 2: Electric Boogaloo"
    type="search"
  />
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`SearchBar when not loading should create the SearchBar component 1`] = `
<form
  className="searchBar hide-submit"
  onSubmit={[Function]}
>
  <label>
    Search OMDb's film database
  </label>
  <input
    disabled={null}
    onChange={[Function]}
    placeholder="Star Wars 2: Electric Boogaloo"
    type="search"
  />
  <input
    type="submit"
    value="Submit"
  />
</form>
`;
